docs/versions/4.22/groups/M23.md
---
layout: group
group_id: M23
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Additional kernel hardening parameters beyond M2. Disables kexec (prevents kernel replacement at runtime), restricts perf_event access, and controls core dump file naming.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `kernel.kexec_load_disabled=1` | Disable kexec kernel loading |
| `kernel.perf_event_paranoid=2` | Restrict perf_event to root only |
| `kernel.core_pattern=|/bin/false` | Disable core dump processing |

## Verification

```bash
oc debug node/<node> -- chroot /host sysctl kernel.kexec_load_disabled kernel.perf_event_paranoid kernel.core_pattern
```
